--- a/frontend/src/assets/style/level.css
+++ b/frontend/src/assets/style/level.css
@@ -56,12 +56,8 @@
     position: absolute;
 }
 
-.level #blue{
-    color: rgb(11, 11, 105);
-}
-
-.level #red{
-    color: rgb(107, 9, 9);
+.level #white{
+    color: rgb(255, 255, 255);
 }
 
 .level #flex{
